# aoc

./: .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml
2023/: Cargo.toml
