[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
compact_str = "0.6.1"
hashbrown = "0.13.1"
itertools = "0.10.5"
ndarray = { version = "0.15.6", features = ["rayon"] }
num = "0.4.0"
once_cell = "1.16.0"
pathfinding = "4.0.0"
regex = "1.7.0"
scan_fmt = "0.2.6"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
